<resources>

    <string name="app_name">IM</string>

    <!--登录-->
    <string name="str_login_account">账户:</string>
    <string name="str_login_pw">密码:</string>
    <string name="str_login_forget_pw">忘记密码</string>
    <string name="str_login_tips">登录遇到问题?</string>
    <string name="str_login_reg">注册账号</string>
    <string name="str_login_login">登录</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_login_fail">登录失败</string>

    <!--注册-->
    <string name="str_reg_reg">注册</string>
    <string name="str_reg_phone">电话:</string>
    <string name="str_reg_pw">密码:</string>
    <string name="str_reg_code">验证码:</string>
    <string name="str_reg_get_code">获取验证码</string>
    <string name="str_reg_no_desc">这个人很懒,什么都没有留下!</string>

    <!--忘记密码-->
    <string name="str_forget_tips">温馨提示:仅支持登陆过的账号找回</string>
    <string name="str_forget_reset">重置</string>
    <string name="str_forget_pw">忘记密码</string>

    <!--主页-->
    <string name="str_main_title_session">会话</string>
    <string name="str_main_title_friend">朋友</string>
    <string name="str_main_title_news">资讯</string>
    <string name="str_main_title_me">我</string>
    <string name="str_main_title_add">添加</string>
    <string name="str_main_title_more">更多</string>
    <string name="str_main_title_more_link">发起群聊</string>
    <string name="str_main_title_add_friend">添加朋友</string>
    <string name="str_main_title_scan">扫一扫</string>
    <string name="str_main_scan_you">这是你自己</string>

    <!--我-->
    <string name="str_me_new_friend">新朋友</string>
    <string name="str_me_not_nickname">未设置昵称</string>

    <!--编辑用户-->
    <string name="str_user_edit_tips">编辑头像</string>
    <string name="str_user_edit_user">编辑信息</string>
    <string name="str_user_edit_nickname">昵称:</string>
    <string name="str_user_edit_sex">性别:</string>
    <string name="str_user_edit_age">年龄:</string>
    <string name="str_user_edit_b">生日:</string>
    <string name="str_user_edit_phone">电话:</string>
    <string name="str_user_edit_city">地区:</string>
    <string name="str_user_edit_camera">相机</string>
    <string name="str_user_edit_ablum">相册</string>
    <string name="str_user_edit_selete_date">选择日期</string>
    <string name="str_user_edit_selete_city">选择城市</string>

    <!--添加好友-->
    <string name="str_add_friend_title_text">添加好友</string>
    <string name="str_add_friend_et_tips">请输入账号</string>
    <string name="str_add_friend_btn_text">搜索</string>
    <string name="str_add_friend_tips_text">你需要发送验证申请,等对方通过</string>
    <string name="str_add_friend_commit_title">验证申请</string>
    <string name="str_add_friend_send_success">好友请求发送成功，等待验证</string>
    <string name="str_add_friend_send_fail">请求失败</string>
    <string name="str_add_friend_desc">我通过了你的好友验证请求，我们可以开始聊天了!</string>
    <string name="str_add_friend_msg">同意添加你为好友</string>
    <string name="str_add_friend_meto">我是</string>

    <!--用户信息-->
    <string name="str_user_info_title_text">用户信息</string>
    <string name="str_user_info_city">地区</string>
    <string name="str_user_info_desc">个性签名</string>
    <string name="str_user_info_dialog_error">用户信息出错</string>
    <string name="str_user_info_momo">陌生人聊天</string>
    <string name="str_user_info_send_msg">发消息</string>
    <string name="str_user_info_confirm_delete">确定删除此好友?</string>

    <!--新朋友-->
    <string name="str_new_friend_unread">未读</string>
    <string name="str_new_friend_read">已读</string>
    <string name="str_new_friend_add">已添加</string>
    <string name="str_new_friend_unadd">已拒绝</string>
    <string name="str_new_friend_ages">同意</string>

    <!--聊天-->
    <string name="str_chat_voice_text">按住说话</string>
    <string name="str_chat_more_camera">相机</string>
    <string name="str_chat_more_album">相册</string>
    <string name="str_chat_more_location">位置</string>
    <string name="str_chat_more_file">文件</string>
    <string name="str_chat_more_right_text">查看</string>

    <string name="str_chat_image">[图片]</string>
    <string name="str_chat_location">[位置]</string>
    <string name="str_chat_video">[视频]</string>
    <string name="str_chat_voice">[语音]</string>
    <string name="str_chat_unknow">[未定义消息]</string>

    <!--二维码-->
    <string name="str_qrcode_title_text">二维码名片</string>
    <string name="str_qrcode_scan_text">扫一扫</string>
    <string name="str_qrcode_tips">扫一扫上面的二维码图案加我IM</string>
    <string name="str_qrcode_save">保存二维码</string>

    <!--设置-->
    <string name="str_setting_title_text">设置</string>
    <string name="str_setting_change_pw">修改密码</string>
    <string name="str_setting_switch_languaue">切换语言</string>
    <string name="str_setting_new_msg">新消息通知</string>
    <string name="str_setting_exit_app">退出登陆</string>

    <!--修改密码-->
    <string name="str_change_pw_title_text">修改密码</string>
    <string name="str_change_pw_old">旧密码:</string>
    <string name="str_change_pw_new">新密码:</string>
    <string name="str_change_pw_new_to">确认新密码:</string>
    <string name="str_change_pw_change">修改</string>

    <!--语言-->
    <string name="str_languaue_zh">简体中文</string>
    <string name="str_languaue_tw">繁體中文</string>
    <string name="str_languaue_en">English</string>

    <!--浏览-->
    <string name="str_brower_text">文本浏览</string>
    <string name="str_brower_img">图片浏览</string>
    <string name="str_brower_video">视频浏览</string>

    <!--新闻-->
    <string name="str_news_title_text">新闻详情</string>

    <!--Toast-->
    <string name="str_toast_to_friend">你们已经是好友了!</string>
    <string name="str_toast_op_success">操作成功</string>
    <string name="str_toast_op_fail">操作失败</string>

    <string name="str_toast_account_null">账户不能为空</string>
    <string name="str_toast_pw_null">密码不能为空</string>
    <string name="str_toast_phone_null">电话不能为空</string>
    <string name="str_toast_code_null">验证码不能为空</string>

    <string name="str_toast_get_code_success">获取验证码成功</string>
    <string name="str_toast_get_code_fail">获取验证码失败</string>
    <string name="str_toast_reg_success">注册成功</string>
    <string name="str_toast_reg_fail">注册失败</string>
    <string name="str_toast_reset_success">重置成功</string>
    <string name="str_toast_reset_fail">重置失败</string>
    <string name="str_toast_save_success">保存成功</string>
    <string name="str_toast_save_fail">保存失败</string>
    <string name="str_toast_delete_success">删除成功</string>
    <string name="str_toast_delete_fail">删除失败</string>
    <string name="str_toast_qrcode_fail">解析失败</string>
    <string name="str_toest_photo_is_have">图片已存在</string>

    <string name="str_toest_location_succeess">定位成功</string>
    <string name="str_toest_location_fail">定位失败</string>

    <string name="str_toast_quest_friend">请求添加好友</string>
    <string name="str_toast_agree_friend">同意添加好友</string>
    <string name="str_toast_have_msg">你有一条新消息</string>

    <string name="str_toast_code_error">验证码错误</string>
    <string name="str_toast_pw_to_error">两次密码不一致</string>

    <!--Time-->
    <string name="str_time_format_1">刚刚</string>
    <string name="str_time_format_2">分钟前</string>
    <string name="str_time_format_3">半小时前</string>
    <string name="str_time_format_4">小时前</string>
    <string name="str_time_format_5">天前</string>
    <string name="str_time_format_6">半个月前</string>
    <string name="str_time_format_7">月前</string>
    <string name="str_time_format_8">半年前</string>
    <string name="str_time_format_9">年前</string>

    <string name="str_time_year">年</string>
    <string name="str_time_month">月</string>
    <string name="str_time_day">日</string>
    <string name="str_time_hour">时</string>
    <string name="str_time_minute">分</string>
    <string name="str_time_seconds">秒</string>

    <!--Common-->
    <string name="str_common_confirm">确定</string>
    <string name="str_common_cancel">取消</string>
    <string name="str_common_save">保存</string>
    <string name="str_common_delete">刪除</string>
    <string name="str_common_commit">提交</string>
    <string name="str_common_send">发送</string>
    <string name="str_common_share">分享</string>
    <string name="str_common_boy">男</string>
    <string name="str_common_girl">女</string>

    <!--新闻标题-->
    <string-array name="news_title">
        <item>头条</item>
        <item>社会</item>
        <item>国内</item>
        <item>国际</item>
        <item>娱乐</item>
        <item>体育</item>
        <item>军事</item>
        <item>科技</item>
        <item>财经</item>
        <item>时尚</item>
    </string-array>

    <string-array name="news_title_en">
        <item>top</item>
        <item>shehui</item>
        <item>guonei</item>
        <item>guoji</item>
        <item>yule</item>
        <item>tiyu</item>
        <item>junshi</item>
        <item>keji</item>
        <item>caijing</item>
        <item>shishang</item>
    </string-array>

</resources>
