<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:padding="@dimen/size_all_pading">

    <!--标题-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_all_pading"
        android:text="@string/str_login_title_text"
        android:textColor="@color/color_black"
        android:textSize="@dimen/size_all_title_size"
        android:textStyle="bold" />

    <!--账户-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_login_op_m_t"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_login_account"
            android:textColor="@color/color_black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_login_op_et_t"
            android:hint="@string/str_login_pw"
            android:textColor="@color/color_black" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_login_op_text_t"
        android:text="@string/str_login_tips" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_login_op_m_t"
        android:background="@drawable/shape_all_button_bg"
        android:text="@string/str_login_login"
        android:textColor="@color/color_white" />

</LinearLayout>