<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/size_login_dialog_width"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_more_link"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_login_login_item_height"
            android:gravity="center"
            android:text="@string/str_main_title_more_link"
            android:textColor="@color/color_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_all_line_height"
            android:alpha="0.2"
            android:background="@color/color_gary" />

        <TextView
            android:id="@+id/tv_add_friend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_login_login_item_height"
            android:gravity="center"
            android:text="@string/str_main_title_add_friend"
            android:textColor="@color/color_black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_all_line_height"
            android:alpha="0.2"
            android:background="@color/color_gary" />

        <TextView
            android:id="@+id/tv_scan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_login_login_item_height"
            android:gravity="center"
            android:text="@string/str_main_title_scan"
            android:textColor="@color/color_black" />

    </LinearLayout>

</LinearLayout>