<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/includ_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_all_et_height"
        android:layout_marginTop="@dimen/size_login_top_pading"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_change_pw_old"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/et_old"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="number"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_all_line_height"
        android:alpha="0.2"
        android:background="@color/color_gary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_all_et_height"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_change_pw_new"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/et_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="number"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_all_line_height"
        android:alpha="0.2"
        android:background="@color/color_gary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_all_et_height"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_change_pw_new_to"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/et_new_to"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="number"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_change"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_login_button_top_pading"
        android:layout_marginTop="@dimen/size_login_button_top_pading"
        android:background="@drawable/shape_all_button_bg"
        android:text="@string/str_change_pw_change"
        android:textColor="@color/color_white" />

</LinearLayout>