<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/includ_title_right_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/mMainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:background="@color/color_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_session"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_margin="5dp"
                android:id="@+id/iv_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_session_a" />

            <TextView
                android:id="@+id/tv_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_main_title_session"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_friend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_margin="5dp"
                android:id="@+id/iv_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_firend_a" />

            <TextView
                android:id="@+id/tv_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_main_title_friend"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_margin="5dp"
                android:id="@+id/iv_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_news_a" />

            <TextView
                android:id="@+id/tv_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_main_title_news"
                android:textColor="@color/color_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_me"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_margin="5dp"
                android:id="@+id/iv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_me_a" />

            <TextView
                android:id="@+id/tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_main_title_me"
                android:textColor="@color/color_black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>